@@ -8,34 +8,72 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.EventHitDto;
-import ru.practicum.category.CategoryMapper;
-import ru.practicum.event.dto.EventFullDto;
-import ru.practicum.event.dto.EventParams;
-import ru.practicum.event.dto.EventShortDto;
-import ru.practicum.event.dto.State;
+import ru.practicum.event.dto.*;
 import ru.practicum.event.mapper.EventMapper;
 import ru.practicum.event.model.Event;
+import ru.practicum.event.model.View;
 import ru.practicum.event.repository.EventRepository;
+import ru.practicum.event.repository.JpaSpecifications;
+import ru.practicum.event.repository.ViewRepository;
 import ru.practicum.ewm.client.StatClient;
+import ru.practicum.exception.BadRequestException;
 import ru.practicum.exception.NotFoundException;
 import ru.practicum.request.ParticipationRequestStatus;
-import ru.practicum.user.UserMapper;
+import ru.practicum.request.RequestRepository;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
+@Transactional(readOnly = true)
 public class EventPublicServiceImpl implements EventPublicService {
 
-    EventRepository eventRepository;
     StatClient statClient;
+    EventRepository eventRepository;
+    RequestRepository requestRepository;
+    ViewRepository viewRepository;
 
+    // Получение событий с возможностью фильтрации
     @Override
-    public List<EventShortDto> getAllEventsByParams(EventParams eventParams, HttpServletRequest request) {
+    public List<EventShortDto> getAllEventsByParams(EventParams params, HttpServletRequest request) {
+
+        if (params.getRangeStart() != null && params.getRangeEnd() != null && params.getRangeEnd().isBefore(params.getRangeStart())) {
+            throw new BadRequestException("rangeStart should be before rangeEnd");
+        }
+
+        // если в запросе не указан диапазон дат [rangeStart-rangeEnd], то нужно выгружать события, которые произойдут позже текущей даты и времени
+        if (params.getRangeStart() == null) params.setRangeStart(LocalDateTime.now());
+
+        // сортировочка и пагинация
+        Sort sort = Sort.by(Sort.Direction.ASC, "eventDate");
+        if (EventSort.VIEWS.equals(params.getEventSort())) sort = Sort.by(Sort.Direction.DESC, "views");
+        PageRequest pageRequest = PageRequest.of(params.getFrom().intValue() / params.getSize().intValue(),
+                params.getSize().intValue(), sort);
+
+        Page<Event> events = eventRepository.findAll(JpaSpecifications.publicFilters(params), pageRequest);
+        List<Long> eventIds = events.stream().map(Event::getId).toList();
+
+        // информация о каждом событии должна включать в себя количество просмотров и количество уже одобренных заявок на участие
+        Map<Long, Long> confirmedRequestsMap = requestRepository.getConfirmedRequestsByEventIds(eventIds)
+                .stream()
+                .collect(Collectors.toMap(
+                        r -> (Long) r[0],
+                        r -> (Long) r[1]
+                ));
+        Map<Long, Long> viewsMap = viewRepository.countsByEventIds(eventIds)
+                .stream()
+                .collect(Collectors.toMap(
+                        r -> (Long) r[0],
+                        r -> (Long) r[1]
+                ));
+
+        // информацию о том, что по этому эндпоинту был осуществлен и обработан запрос, нужно сохранить в сервисе статистики
         statClient.hit(EventHitDto.builder()
                 .ip(request.getRemoteAddr())
                 .uri(request.getRequestURI())
@@ -43,45 +81,33 @@ public class EventPublicServiceImpl implements EventPublicService {
                 .timestamp(LocalDateTime.now())
                 .build());
 
-        LocalDateTime rangeStart = eventParams.getRangeStart() != null ?
-                eventParams.getRangeStart() : LocalDateTime.now();
-        LocalDateTime rangeEnd = eventParams.getRangeEnd();
-
-
-        PageRequest pageRequest = PageRequest.of(
-                eventParams.getFrom().intValue() / eventParams.getSize().intValue(),
-                eventParams.getSize().intValue(),
-                getSort(eventParams.getSort())
-        );
-
-        Page<Event> eventPage = eventRepository.findPublicEvents(
-                eventParams.getText(),
-                eventParams.getCategories(),
-                eventParams.getPaid(),
-                rangeStart,
-                rangeEnd,
-                eventParams.getOnlyAvailable(),
-                pageRequest
-        );
-
-
-        return eventPage.getContent().stream()
-                .map(event -> EventMapper.toEventShortDto(
-                        event,
-                        CategoryMapper.toCategoryDto(event.getCategory()),
-                        UserMapper.toUserShortDto(event.getUser()),
-                        eventRepository.countByEventIdAndStatus(event.getId(), ParticipationRequestStatus.CONFIRMED)))
-                .collect(Collectors.toList());
+        return events.stream()
+                .map(e -> EventMapper.toEventShortDto(e, confirmedRequestsMap.get(e.getId()), viewsMap.get(e.getId())))
+                .toList();
     }
 
+    // Получение подробной информации об опубликованном событии по его идентификатору
     @Override
-    public EventFullDto getEventById(Long id, HttpServletRequest request) {
-        Event event = eventRepository.findByIdAndState(id, State.PUBLISHED)
+    @Transactional(readOnly = false)
+    public EventFullDto getEventById(Long eventId, HttpServletRequest request) {
+        // событие должно быть опубликовано
+        Event event = eventRepository.findByIdAndState(eventId, State.PUBLISHED)
                 .orElseThrow(() -> new NotFoundException("Event not found"));
 
-        event.setViews(event.getViews() + 1);
-        eventRepository.save(event);
+        // информация о событии должна включать в себя количество просмотров и количество подтвержденных запросов
+        Long confirmedRequests = requestRepository.countByEventIdAndStatus(eventId, ParticipationRequestStatus.CONFIRMED);
+        Long views = viewRepository.countByEventId(eventId);
 
+        // делаем новый уникальный просмотр
+        if (!viewRepository.existsByEventIdAndIp(eventId, request.getRemoteAddr())) {
+            View view = View.builder()
+                    .event(event)
+                    .ip(request.getRemoteAddr())
+                    .build();
+            viewRepository.save(view);
+        }
+
+        // информацию о том, что по этому эндпоинту был осуществлен и обработан запрос, нужно сохранить в сервисе статистики
         statClient.hit(EventHitDto.builder()
                 .ip(request.getRemoteAddr())
                 .uri(request.getRequestURI())
@@ -89,24 +115,7 @@ public class EventPublicServiceImpl implements EventPublicService {
                 .timestamp(LocalDateTime.now())
                 .build());
 
-        return EventMapper.toEventFullDto(
-                event,
-                CategoryMapper.toCategoryDto(event.getCategory()),
-                UserMapper.toUserShortDto(event.getUser()),
-                eventRepository.countByEventIdAndStatus(event.getId(), ParticipationRequestStatus.CONFIRMED));
+        return EventMapper.toEventFullDto(event, confirmedRequests, views);
     }
 
-    private org.springframework.data.domain.Sort getSort(ru.practicum.event.dto.Sort sort) {
-        if (sort == null) {
-            return org.springframework.data.domain.Sort.by(Sort.Direction.ASC, "eventDate");
-        }
-
-        switch (sort) {
-            case VIEWS:
-                return org.springframework.data.domain.Sort.by(Sort.Direction.DESC, "views");
-            case EVENT_DATE:
-            default:
-                return org.springframework.data.domain.Sort.by(Sort.Direction.ASC, "eventDate");
-        }
-    }
 }
